syntax = "proto3";

package pb;

option go_package = "github.com/tel4vn/pitel-api-microservices/pb";

message Auth {
    string tenant_id = 1;
    string business_unit_id = 2;
    string user_id = 3;
    string username = 4;
    string database_host = 5;
    uint32 database_port = 6;
    string database_name = 7;
    string database_user = 8;
    string database_password = 9;
    repeated string services = 10;
}

message AuthResponse {
    Auth data = 1;
}