syntax = "proto3";

package pb;

option go_package = "github.com/tel4vn/pitel-api-microservices/pb";

import "auth.proto";

service AuthService{
    rpc VerifyToken(TokenRequest) returns (AuthResponse);
}

message TokenRequest {
    string token = 1;
}
